--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WDD 131: Dynamic Web Fundamentals</title>
-  <link rel="stylesheet" href="styles/base.css">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals project by Bankole Ebenezer O. Learn about web development fundamentals, resources, and projects designed for aspiring developers." />
+    <meta name="author" content="Bankole Ebenezer" />
+    <title>WDD 131 - Dynamic Web Fundamentals - Bankole Ebenezer</title>
+    <link rel="stylesheet" href="styles/base.css">
+  </head>
 <body>
   <header>
-    <h1>WDD 131: Dynamic Web Fundamentals - <span>Rubia M. Francesco</span></h1>
+    <h1>WDD 131: Dynamic Web Fundamentals - <span>Bankoe Ebenezer</span></h1>
     <nav>
       <a href="#">LinkedIn</a>
       <a href="#">Canvas</a>
@@ -27,7 +29,7 @@
               <div class="content">
                 <img src="images/167693270.jpeg" alt="Placeholder Image">
                 <p>
-                  Hello! My name is [Your Name], and I am passionate about web development. 
+                  Hello! My name is Bankole Ebenezer, and I am passionate about web development. 
                   I enjoy creating beautiful and functional websites while continuously learning 
                   new technologies. In my free time, I like reading, exploring new places, and 
                   spending time with friends and family.
@@ -66,6 +68,5 @@
   <footer>
     <p>&copy; 2025 Bankole Ebenezer| Abeokuta, Nigeria</p>
   </footer>
-  
 </body>
 </html>
