--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
         <div class="container-right">
           <h2>Web Dev Resources</h2>
           <ul>
-            <li>Dev.to Community</li>
-            <li>GitHub Repositories</li>
-            <li>MDN Web Docs</li>
-            <li>Frontend Mentor Challenges</li>
-            <li>Stack Overflow Discussions</li>
+            <li><a href="https://dev.to" target="_blank">Dev.to Community</a></li>
+            <li><a href="https://github.com" target="_blank">GitHub Repositories</a></li>
+            <li><a href="https://developer.mozilla.org" target="_blank">MDN Web Docs</a></li>
+            <li><a href="https://www.frontendmentor.io/" target="_blank">Frontend Mentor Challenges</a></li>
+            <li><a href="https://stackoverflow.com" target="_blank">Stack Overflow Discussions</a></li>
           </ul>
         </div>
-    </div>
+        
   </main>
 
   <footer>
