--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals project by Bankole Ebenezer O. Learn about web development fundamentals, resources, and projects designed for aspiring developers." />
     <meta name="author" content="Bankole Ebenezer" />
     <title>WDD 131 - Dynamic Web Fundamentals - Bankole Ebenezer</title>
+
+    <!-- Google Font Preconnect Links -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
+  <!-- Google Font Link -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/base.css">
   </head>
 <body>
