--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <!-- Google Font Link -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
+   <!-- Link to JS File with 'defer' Attribute -->
+   <script src="scripts/getdates.js" defer></script>
+
     <link rel="stylesheet" href="styles/base.css">
   </head>
 <body>
@@ -75,6 +78,7 @@
 
   <footer>
     <p>&copy; 2025 Bankole Ebenezer| Abeokuta, Nigeria</p>
+    <p id="date"></p> <!-- This is where the date will be displayed -->
   </footer>
 </body>
 </html>
