--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                 </p>
               </div>
             </div>
+          </div>
+        </div>
+    </div>
 
             <!-- Abeokuta Section -->
             <div class="abeokuta-section">
