--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h1>Abeokuta, Nigeria</h1>
             <hr>
             <div class="abeokuta-content">
-              <img src="images/Flag_of_Nigeria.svg.webp" alt="Abeokuta Image">
+              <img src="images/R-1.jpeg" alt="Abeokuta Image">
               <p>
                 Abeokuta, Nigeria is a city located in Nigeria, with a lot of beautiful rocks and so much more to explore.
               </p>
