--- a/temples.html
+++ b/temples.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="........................">
+  <meta name="author" content="Bankole Ebenezer">
   <title>Temple Picture Album</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -36,35 +38,35 @@
       </figure>
       <figure>
         <img src="images/aba_nigeria_temple_lds.jpeg" alt="Temple Image">
-        <figcaption>Temple 2</figcaption>
+        <figcaption>Aba Nigeria Temple</figcaption>
       </figure>
       <figure>
         <img src="images/aba_nigeria_temple_lds.jpeg" alt="Temple Image">
-        <figcaption>Temple 3</figcaption>
+        <figcaption>Aba Nigeria Temple</figcaption>
       </figure>
       <figure>
         <img src="images/aba_nigeria_temple_lds.jpeg" alt="Temple Image">
-        <figcaption>Temple 4</figcaption>
+        <figcaption>Aba Nigeria Temple</figcaption>
       </figure>
       <figure>
         <img src="images/aba_nigeria_temple_lds.jpeg" alt="Temple Image">
-        <figcaption>Temple 5</figcaption>
+        <figcaption>Aba Nigeria Temple</figcaption>
       </figure>
       <figure>
         <img src="images/aba_nigeria_temple_lds.jpeg" alt="Temple Image">
-        <figcaption>Temple 6</figcaption>
+        <figcaption>Aba Nigeria Temple</figcaption>
       </figure>
       <figure>
         <img src="images/aba_nigeria_temple_lds.jpeg" alt="Temple Image">
-        <figcaption>Temple 7</figcaption>
+        <figcaption>Aba Nigeria Temple</figcaption>
       </figure>
       <figure>
         <img src="images/aba_nigeria_temple_lds.jpeg" alt="Temple Image">
-        <figcaption>Temple 8</figcaption>
+        <figcaption>Aba Nigeria Temple</figcaption>
       </figure>
       <figure>
         <img src="images/aba_nigeria_temple_lds.jpeg" alt="Temple Image">
-        <figcaption>Temple 9</figcaption>
+        <figcaption>Aba Nigeria Temple</figcaption>
       </figure>
     </div>
   </main>
