--- a/temples.html
+++ b/temples.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <header>
-    <h1>Temple Picture Album</h1>
+    <h1>Temple Album</h1>
     <nav>
       <button class="hamburger" aria-label="Toggle Menu">☰</button>
       <ul class="nav-menu">
@@ -70,8 +70,6 @@
       </figure>
     </div>
   </main>
-  
-
   <footer>
     <p>&copy; <span id="year"></span> Temple Album</p>
     <p>Last Modified: <span id="lastModified"></span></p>
