--- a/temples.html
+++ b/temples.html
@@ -18,8 +18,8 @@
   <header>
     <h1>Temple Album</h1>
     <nav>
-      <button class="hamburger" aria-label="Toggle Menu">☰</button>
-      <ul class="nav-menu">
+      <button id="hamburger" aria-label="Toggle Menu">☰</button>
+      <ul class="nav-menu hidden">
         <li><a href="#">Home</a></li>
         <li><a href="#">Old</a></li>
         <li><a href="#">New</a></li>
@@ -71,8 +71,9 @@
     </div>
   </main>
   <footer>
-    <p>&copy; <span id="year"></span> Temple Album</p>
+    <p>&copy; <span id="year"></span>🌴Bankole Ebenezer🌴</p>
     <p>Last Modified: <span id="lastModified"></span></p>
   </footer>
+  
 </body>
 </html>
