--- a/temples.html
+++ b/temples.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="........................">
   <meta name="author" content="Bankole Ebenezer">
-  <title>Temple Picture Album</title>
+  <title>Temple Album</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <!-- CSS Files -->
