--- a/place.html
+++ b/place.html
@@ -1,57 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Madagascar</title>
+    <meta name="description" content="Explore Madagascar's data, weather, and beautiful wildlife including lemurs. Learn about the country's geography, population, and current conditions.">
+    <meta name="author" content="[Your Name Here]">
+    <title>WDD 131 - Madagascar Country Information Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/place.css">
 </head>
 <body>
-    <header class="header">
-        <h1>Madagascar</h1>
+    <header>
+        <h1>Madagascar Country Information</h1>
         <div class="green-stripe"></div>
     </header>
 
-    <div class="hero">
-        <picture>
-            <source srcset="images/pexels-jef-k-1518692548-30440420.webp" media="(max-width: 480px)">
-            <source srcset="images/pexels-jef-k-1518692548-30440420.webp" media="(max-width: 768px)">
-            <source srcset="images/pexels-jef-k-1518692548-30440420.webp" media="(min-width: 769px)">
-            <img src="images/pexels-jef-k-1518692548-30440420.webp" alt="Lemurs in Madagascar">
-        </picture>
-    </div>
-
-    <div class="info-container">
-        <div class="info-box data">
-            <h2>Data</h2>
-            <div class="data-grid">
-                <p><span>Area:</span> 587,041 sq km</p>
-                <p><span>Population:</span> 27,691,018</p>
-                <p><span>Capital:</span> Antananarivo</p>
-                <p><span>Languages:</span> Malagasy, French</p>
-                <p><span>Currency:</span> Malagasy Ariary</p>
-                <p><span>Time Zone:</span> UTC+3</p>
-                <p><span>Calling Code:</span> +261</p>
-                <p><span>Internet TLD:</span> .mg</p>
-            </div>
+    <main>
+        <div class="hero">
+            <picture>
+                <source srcset="images/pexels-jef-k-1518692548-30440420-small.webp" media="(max-width: 480px)">
+                <source srcset="images/pexels-jef-k-1518692548-30440420-medium.webp" media="(max-width: 768px)">
+                <source srcset="images/pexels-jef-k-1518692548-30440420.webp" media="(min-width: 769px)">
+                <img src="images/pexels-jef-k-1518692548-30440420.webp" alt="Group of lemurs in Madagascar" width="1200" height="800">
+            </picture>
         </div>
 
-        <div class="info-box weather">
-            <h2>Weather ⛅</h2>
-            <div class="weather-grid">
-                <p><span>Temperature:</span> <span id="temperature">10</span>°C</p>
-                <p><span>Conditions:</span> Partly Cloudy</p>
-                <p><span>Wind:</span> <span id="wind-speed">5</span> km/h</p>
-                <p><span>Wind Chill:</span> <span id="wind-chill">9.8</span>°C</p>
+        <div class="info-container">
+            <div class="info-box data">
+                <h2>Data</h2>
+                <div class="data-grid">
+                    <p><span>Area:</span> 587,041 sq km</p>
+                    <p><span>Population:</span> 27,691,018</p>
+                    <p><span>Capital:</span> Antananarivo</p>
+                    <p><span>Languages:</span> Malagasy, French</p>
+                    <p><span>Currency:</span> Malagasy Ariary</p>
+                    <p><span>Time Zone:</span> UTC+3</p>
+                    <p><span>Calling Code:</span> +261</p>
+                    <p><span>Internet TLD:</span> .mg</p>
+                </div>
+            </div>
+
+            <div class="info-box weather">
+                <h2>Weather <span class="weather-icon"></span></h2>
+                <div class="weather-grid">
+                    <p><span>Temperature:</span> <span id="temperature">10</span>°C</p>
+                    <p><span>Conditions:</span> Partly Cloudy</p>
+                    <p><span>Wind:</span> <span id="wind-speed">5</span> km/h</p>
+                    <p><span>Wind Chill:</span> <span id="wind-chill">9.8</span>°C</p>
+                </div>
             </div>
         </div>
-    </div>
+    </main>
 
     <footer class="footer">
         <p>©2024 🌸 Rubia Magdelena Francesco 🌸 Madagascar</p>
-        <p>Last Modification: 02/08/2024 22:47:47</p>
+        <p>Last Modification: <span id="last-modified"></span></p>
     </footer>
 
-    <script src="scripts/place.js"></script>
+    <script src="scripts/place.js" defer></script>
 </body>
 </html>
