--- a/place.html
+++ b/place.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore Madagascar's data, weather, and beautiful wildlife including lemurs. Learn about the country's geography, population, and current conditions.">
-    <meta name="author" content="[Your Name Here]">
+    <meta name="author" content="Bankole Ebenezer">
     <title>WDD 131 - Madagascar Country Information Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,8 +22,8 @@
             <picture>
                 <source srcset="images/pexels-jef-k-1518692548-30440420-small.webp" media="(max-width: 480px)">
                 <source srcset="images/pexels-jef-k-1518692548-30440420-medium.webp" media="(max-width: 768px)">
-                <source srcset="images/pexels-jef-k-1518692548-30440420.webp" media="(min-width: 769px)">
-                <img src="images/pexels-jef-k-1518692548-30440420.webp" alt="Group of lemurs in Madagascar" width="1200" height="800">
+                <source srcset="images/pexels-jef-k-1518692548-30440420 (2).webp" media="(min-width: 769px)">
+                <img src="images/pexels-jef-k-1518692548-30440420 (2).webp" alt="Group of lemurs in Madagascar" width="1200" height="800">
             </picture>
         </div>
 
