--- a/place.html
+++ b/place.html
@@ -23,7 +23,7 @@
                 <source srcset="images/pexels-jef-k-1518692548-30440420-small.webp" media="(max-width: 480px)">
                 <source srcset="images/pexels-jef-k-1518692548-30440420-medium.webp" media="(max-width: 768px)">
                 <source srcset="images/pexels-jef-k-1518692548-30440420 (2).webp" media="(min-width: 769px)">
-                <img src="images/pexels-jef-k-1518692548-30440420 (2).webp" alt="Group of lemurs in Madagascar" width="1200" height="800">
+                <img src="images/placebg.webp" alt="Group of lemurs in Madagascar" width="1200" height="800">
             </picture>
         </div>
 
