--- a/place.html
+++ b/place.html
@@ -20,9 +20,9 @@
     <main>
         <div class="hero">
             <picture>
-                <source srcset="images/pexels-jef-k-1518692548-30440420-small.webp" media="(max-width: 480px)">
-                <source srcset="images/pexels-jef-k-1518692548-30440420-medium.webp" media="(max-width: 768px)">
-                <source srcset="images/pexels-jef-k-1518692548-30440420 (2).webp" media="(min-width: 769px)">
+                <source srcset="images/placebg-small.webp" media="(max-width: 480px)">
+                <source srcset="images/placebg-medium.webp" media="(max-width: 768px)">
+                <source srcset="images/placebg.webp" media="(min-width: 769px)">
                 <img src="images/placebg.webp" alt="Group of lemurs in Madagascar" width="1200" height="800">
             </picture>
         </div>
