--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -8,6 +8,7 @@
   <title>Temple Album</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <!-- CSS Files -->
   <link rel="stylesheet" href="styles/filtered-template.css">
   <link rel="stylesheet" href="styles/temples-large.css">
@@ -16,6 +17,7 @@
 </head>
 <body>
   <header>
+    <h1>Temple Album</h1>
     <nav>
       <button id="hamburger" aria-label="Toggle Menu">☰</button>
       <ul class="nav-menu hidden">
