--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <header>
-    <h1>Temple Album</h1>
+    <h1>Bankole Ebenezer</h1>
     <nav>
       <button id="hamburger" aria-label="Toggle Menu">☰</button>
       <ul class="nav-menu hidden">
