--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Review Form</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="form/styles.css">
 </head>
 <body>
     <main>
