--- a/form.html
+++ b/form.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Review Form</title>
-    <link rel="stylesheet" href="form/styles.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Submit your product review for our futuristic products. Rate and share your experience with our innovative technology.">
+    <meta name="author" content="[Your Name]">
+    <title>Product Review Form - Rate Our Products</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
@@ -74,11 +79,8 @@
         </form>
     </main>
     <footer>
-        <p>&copy; <span id="year"></span>🌴Bankole Ebenezer🌴</p>
-        <p>Last Modified: <span id="lastModified"></span></p>
+        <p>&copy; 2025 Product Review Form. All rights reserved.</p>
     </footer>
-    <script src="scripts/scripts.js"></script>
-</body>
-</html>
+    <script src="scripts.js" defer></script>
 </body>
 </html>
