--- a/review.html
+++ b/review.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Review Submitted</title>
-    <link rel="stylesheet" href="form/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
@@ -18,6 +18,6 @@
     <footer>
         <p>&copy; 2025 Product Review Form. All rights reserved.</p>
     </footer>
-    <script src="scripts/confirmation .js"></script>
+    <script src="confirmation .js"></script>
 </body>
 </html>
