--- a/review.html
+++ b/review.html
@@ -18,6 +18,6 @@
     <footer>
         <p>&copy; 2025 Product Review Form. All rights reserved.</p>
     </footer>
-    <script src="confirmation .js"></script>
+    <script src="scripts/confirmation .js"></script>
 </body>
 </html>
