--- a/form.html
+++ b/form.html
@@ -81,6 +81,6 @@
     <footer>
         <p>&copy; 2025 Product Review Form. All rights reserved.</p>
     </footer>
-    <script src="scripts.js" defer></script>
+    <script src="scripts/scripts.js" defer></script>
 </body>
 </html>
