--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Submit your product review for our futuristic products. Rate and share your experience with our innovative technology.">
-    <meta name="author" content="[Your Name]">
+    <meta name="author" content="Bankole Ebenezer ">
     <title>Product Review Form - Rate Our Products</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
