--- a/review.html
+++ b/review.html
@@ -16,8 +16,8 @@
         </div>
     </main>
     <footer>
-        <p>&copy; 2025 Product Review Form. All rights reserved.</p>
+        <p>&copy; <span id="year"></span> Product Review Form. All rights reserved. | Last Modified: <span id="lastModified"></span></p>
     </footer>
-    <script src="scripts/confirmation .jspus"></script>
+    <script src="scripts/review.js"></script>
 </body>
 </html>
