--- a/week6/index.html
+++ b/week6/index.html
@@ -10,7 +10,7 @@
 
     <!-- Header with Navigation Bar -->
     <header>
-        <div class="logo">Alina Lee</div>
+        <div class="logo">Ebenezer</div>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
